# services

./: .env  .gitignore  README.md  pyproject.toml
services/: __init__.py
services/identity/: __init__.py  azidentity.py
services/messaging/: lga.py
services/models/: __init__.py  creds.py
services/storage/: azstorage.py  storage.py
tests/: test_akv.py  test_mail.pt  test_mail.py
